--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nuxt": "3.0.0",
     "sass": "^1.57.0",
     "sass-loader": "^13.2.0",
+    "vue-i18n": "^9.5.0",
     "webpack": "^5.75.0"
   },
   "dependencies": {
